completando m en Latam, title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <img src="img/logo.png">
-    <h2>1º Challenge ONE | Alura Lata</h2>
+    <h2>1º Challenge ONE | Alura Latam</h2>
   </header>
   <main>
     <section>
